Add CI workflow

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/preset-typescript": "^7.10.4",
-    "@types/node": "12",
+    "@types/node": "10",
+    "@yarnpkg/cli": "^2.2.0",
     "@yarnpkg/core": "^2.2.0",
     "@yarnpkg/fslib": "^2.2.0",
     "@yarnpkg/plugin-pnp": "^2.2.0",
