--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,13 @@ jobs:
     - name: Install Nix
       uses: nixbuild/nix-quick-install-action@v3
 
+    - name: Setup Cachix
+      if: github.event_name == 'push' && github.repository_owner == 'stephank'
+      uses: cachix/cachix-action@v6
+      with:
+        name: stephank
+        signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+
     - name: Test with Nix
       run: yarn
 
