--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@yarnpkg/plugin-pnp": "^2.2.0",
     "babel-loader": "^8.1.0",
     "clipanion": "^2.4.4",
-    "prettier": "2.0.5",
+    "prettier": "2.2.1",
     "raw-loader": "^4.0.1",
-    "typescript": "4.0.2",
-    "webpack": "next",
-    "webpack-sources": "^1.4.3"
+    "typescript": "4.2.4",
+    "webpack": "^5.35.0",
+    "webpack-sources": "^2.2.0"
   },
   "resolutions": {
     "@yarnpkg/cli": "2.2.0",
