Isolated builds of dependencies

--- a/src/tmpl/default.nix.in
+++ b/src/tmpl/default.nix.in
@@ -3,4 +3,4 @@
 
 { pkgs ? import <nixpkgs> { } }:
 
-pkgs.callPackage ./yarn-project.nix { } ./.
+pkgs.callPackage ./yarn-project.nix { } { src = ./.; }
