--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@yarnpkg/cli": "^2.2.0",
     "@yarnpkg/core": "^2.2.0",
     "@yarnpkg/fslib": "^2.2.0",
+    "@yarnpkg/parsers": "^2.2.0",
+    "@yarnpkg/plugin-patch": "^2.1.1",
     "@yarnpkg/plugin-pnp": "^2.2.0",
     "babel-loader": "^8.1.0",
     "clipanion": "^2.4.4",
