Revert "Remove `--immutable-cache` in yarn install command"
This reverts commit 2635212b7750f24dcbfba548e631cb76bed32a19.

--- a/src/tmpl/yarn-project.nix.in
+++ b/src/tmpl/yarn-project.nix.in
@@ -77,7 +77,7 @@ let
       install -m 0600 ${lockfile} ./yarn.lock
       export yarn_global_folder="$TMP"
       export YARN_ENABLE_IMMUTABLE_INSTALLS=false
-      yarn
+      yarn --immutable-cache
     '';
 
     installPhase = ''
@@ -115,7 +115,7 @@ let
 @@ISOLATED_INTEGRATION@@
 
       # Run normal Yarn install to complete dependency installation.
-      yarn install --immutable
+      yarn install --immutable --immutable-cache
 
       runHook postConfigure
     '';
