--- a/src/tmpl/yarn-project.nix.in
+++ b/src/tmpl/yarn-project.nix.in
@@ -37,7 +37,8 @@ let
       cd "$src"
       HOME="$TMP" yarn_cache_folder="$TMP" CI=1 \
         node '${yarnPath}' nixify fetch-one $locator
-      mv "$TMP/$outputFilename" $out
+      # Because we change the cache dir, Yarn may generate a different name.
+      mv "$TMP/$(sed 's/-[^-]*\.[^-]*$//' <<< "$outputFilename")"-* $out
     '';
   in lib.mapAttrs (locator: { filename, sha512 }: stdenv.mkDerivation {
     inherit src builder locator;
