--- a/src/tmpl/bin-wrapper-pnp.sh.in
+++ b/src/tmpl/bin-wrapper-pnp.sh.in
@@ -1,3 +1,3 @@
 #!/bin/sh
 export NODE_OPTIONS="--require @@PNP_PATH@@"
-exec '@@NODE_PATH@@' '@@SCRIPT_PATH@@' "$@"
+exec '@@NODE_PATH@@' '@@BINARY_PATH@@' "$@"
