--- a/src/tmpl/yarn-project.nix.in
+++ b/src/tmpl/yarn-project.nix.in
@@ -152,6 +152,9 @@ let
       # include the node_modules folder in the package.
       if [ -d node_modules ]; then
         cp --recursive node_modules "$out/libexec/$name"
+      else
+        # Otherwise, assume PnP. Copy the loader into the package.
+        cp .pnp.* "$out/libexec/$name"
       fi
 
       cd "$out/libexec/$name"
