Add support for ESM

--- a/src/tmpl/bin-wrapper-pnp.sh.in
+++ b/src/tmpl/bin-wrapper-pnp.sh.in
@@ -1,3 +1,3 @@
 #!/bin/sh
-export NODE_OPTIONS="--require @@PNP_PATH@@"
+export NODE_OPTIONS='@@NODE_OPTIONS@@'
 exec '@@NODE_PATH@@' '@@BINARY_PATH@@' "$@"
