Export yarn-freestanding

--- a/src/tmpl/yarn-project.nix.in
+++ b/src/tmpl/yarn-project.nix.in
@@ -186,6 +186,7 @@ let
 
     passthru = {
       inherit nodejs;
+      yarn-freestanding = yarn;
       yarn = writeShellScriptBin "yarn" ''
         exec '${yarn}/bin/yarn' --cwd '${project}/libexec/${project.name}' "$@"
       '';
