--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,9 @@ jobs:
         run: yarn
 
       - name: Install Nix
-        uses: nixbuild/nix-quick-install-action@v21
+        uses: cachix/install-nix-action@v18
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
 
       - name: Setup Cachix
         if: github.event_name == 'push' && github.repository_owner == 'stephank'
