--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           node-version: 18.x
 
+      - name: Enable corepack
+        run: corepack enable
+
       - name: Yarn cache
         uses: actions/cache@v3
         with:
